Add dto and fix open api
